--- a/exercicio12/feed.html
+++ b/exercicio12/feed.html
@@ -55,8 +55,10 @@
         <div class="card-itens">
 
           <div class="likes">
-            <div class="heart"><i onclick="like()" id="btn" class="far fa-heart"></i></div>
-            <b>1 likes</b>
+            <div id="heart">
+              <i id="empty-heart" class="far fa-heart"></i>
+              <i id="full-heart" class="fas fa-heart"></i></div>
+            <b><span>1</span> likes</b>
           </div>
 
           <b>Postado no dia: 00/00/0000</b>
